# real-estate-analyzer

./: README.md  pyproject.toml
krisha.kz/: .gitignore  SEARCH_PARAMETERS.json  db_new.sqlite  db_old.sqlite  documentation.excalidraw
krisha.kz/src/krisha/config/: parser.py
krisha.kz/src/krisha/crawler/: first_page.py  flat_parser.py
krisha.kz/src/krisha/db/: queries.py  service.py
krisha.kz/src/krisha/entities/: flat.py
src/real_estate_analyzer/: eda.ipynb  main.py
