[project]
name = "real-estate-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "howardat",email = "olzhas.nurzhanovich.kakimzhanov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "real_estate_analyzer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
